Do not prevent favicons from being shown for saved HTML pages.

BUG: 105602
FIXED-IN: 4.8.0
REVIEW: 103474